correctly align items in the upf-nav

--- a/less/base/_navs.less
+++ b/less/base/_navs.less
@@ -6,6 +6,7 @@
   border-bottom: none;
 
   display: flex;
+  align-items: baseline;
   list-style-type: none;
 
   padding: @spacing-x-sm;
